--- a/assets/scss/main/_global.scss
+++ b/assets/scss/main/_global.scss
@@ -76,9 +76,19 @@ a:visited {
 .section-heading span {
     margin-bottom: 12px;
     line-height: 30px;
+
+    include {
+        font-size: 16px;
+    }
 }
 .section-heading h2 {
     text-transform: capitalize;
     color: #000;
     font-weight: 700;
+
+    @include xxs {
+        font-size: 35px;
+        line-height: 50px;
+        text-align: center;
+    }
 }
