--- a/assets/scss/sections/_booking.scss
+++ b/assets/scss/sections/_booking.scss
@@ -16,7 +16,29 @@
         outline: 0;
         margin-left: 10px;
     }
+
     .form-select {
         border: 0px;
+    }
+}
+@include xxs {
+    #booking-section {
+        input {
+            width: 80%;
+        }
+
+        i {
+            font-size: 16px;
+        }
+
+        .btn-custom {
+            margin: 0 auto;
+        }
+
+        .destination,
+        .pickup-date,
+        .return-date {
+            margin-bottom: 15px;
+        }
     }
 }
