--- a/assets/scss/main/_mixins.scss
+++ b/assets/scss/main/_mixins.scss
@@ -26,6 +26,10 @@
     line-height: 158px;
     opacity: 9%;
 
+    @include lg {
+        font-size: 100px;
+    }
+
     @include xxs {
         font-size: 50px;
     }
