--- a/assets/scss/sections/_app.scss
+++ b/assets/scss/sections/_app.scss
@@ -65,8 +65,26 @@
         position: relative;
         img {
             position: absolute;
-            top: -200px;
+            bottom: -275px;
             right: 10px;
+        }
+    }
+}
+
+@include lg {
+    #app-section {
+        margin-top: 300px;
+        .app-bg {
+            width: 90%;
+            &::before {
+                left: 37%;
+            }
+        }
+
+        .app-screenshot {
+            img {
+                // bottom: 0;
+            }
         }
     }
 }
