--- a/assets/scss/sections/_hero.scss
+++ b/assets/scss/sections/_hero.scss
@@ -39,6 +39,10 @@
         z-index: 1;
     }
 
+    .tns-inner {
+        width: 100%;
+    }
+
     .tns-ovh {
         overflow: visible;
     }
@@ -53,6 +57,16 @@
             z-index: 1;
             top: -180px;
             left: -110px;
+        }
+    }
+}
+
+@include lg {
+    #hero-section {
+        .car-container {
+            .car-img {
+                top: -150px;
+            }
         }
     }
 }
