--- a/assets/scss/main/_mixins.scss
+++ b/assets/scss/main/_mixins.scss
@@ -30,6 +30,10 @@
         font-size: 150px;
     }
 
+    @include md {
+        font-size: 130px;
+    }
+
     @include xxs {
         font-size: 50px;
     }
