--- a/assets/scss/sections/_experience.scss
+++ b/assets/scss/sections/_experience.scss
@@ -28,25 +28,7 @@
             height: 241px;
             transform-origin: top;
             transform: translate(-50%, 0);
-
-            // border-left: 3px solid;
-            // border-image: linear-gradient(to right, $color-2 50%, $main-color 50%) 1 100%;
         }
-        // &::after {
-        //     content: " ";
-        //     // border: 3px solid;
-        //     position: absolute;
-        //     width: 24px;
-        //     height: 24px;
-        //     border-radius: 50%;
-        //     top: 250%;
-        //     left: 198px;
-        //     border-color: $color-2;
-
-        //     @include xl {
-        //         left: 168px;
-        //     }
-        // }
 
         h3 {
             color: #000;
@@ -66,42 +48,18 @@
     .left-stroke,
     .right-stroke {
         margin-top: 60px;
-
-        &::before {
-            // height: 212px;
-        }
-
-        &::after {
-            top: 209%;
-        }
     }
 
     .left-stroke {
         &::before {
             transform: rotate(315deg);
         }
-
-        // &::after {
-        //     left: 85%;
-
-        //     @include xl {
-        //         left: 91%;
-        //     }
-        // }
     }
 
     .right-stroke {
         &::before {
             transform: rotate(45deg);
         }
-
-        // &::after {
-        //     left: 40px;
-
-        //     @include xl {
-        //         left: 10px;
-        //     }
-        // }
     }
 
     .experience-car {
@@ -121,15 +79,6 @@
                 transform: translate(-50%, 0) rotate(180deg);
             }
 
-            // &::after {
-            //     top: -252px;
-            //     left: 197px;
-
-            //     @include xl {
-            //         left: 168px;
-            //     }
-            // }
-
             h3 {
                 margin-bottom: 0;
                 margin-top: 30px;
@@ -138,15 +87,6 @@
         .left-stroke,
         .right-stroke {
             margin-top: 0px;
-
-            // &::after {
-            //     top: -190px;
-            //     left: 355px;
-
-            //     @include xl {
-            //         left: 325px;
-            //     }
-            // }
         }
 
         .left-stroke {
@@ -159,14 +99,6 @@
             &::before {
                 transform: rotate(135deg);
             }
-
-            // &::after {
-            //     left: 40px;
-
-            //     @include xl {
-            //         left: 10px;
-            //     }
-            // }
         }
     }
 }
@@ -179,6 +111,36 @@
 
         .experience-car {
             background-position: 25px 105px;
+        }
+    }
+}
+
+@include md {
+    #experience-section {
+        .section-heading {
+            width: 100%;
+            margin-bottom: 50px;
+        }
+
+        .single-experience {
+            margin-bottom: 30px;
+            &::before {
+                display: none;
+            }
+        }
+
+        .left-stroke,
+        .right-stroke {
+            margin-top: 0px;
+        }
+        .experience-car {
+            margin: -50px 0 0;
+        }
+        .bottom-row {
+            .single-experience {
+                margin-top: 30px;
+                margin-bottom: 0;
+            }
         }
     }
 }
