--- a/assets/scss/sections/_header.scss
+++ b/assets/scss/sections/_header.scss
@@ -53,6 +53,20 @@ header {
     }
 }
 
+@include md {
+    header {
+        .btn-custom {
+            padding: 0px 20px;
+            height: 50px;
+            line-height: 55px;
+
+            i {
+                font-size: 25px;
+            }
+        }
+    }
+}
+
 @include xxs {
     header {
         padding: 15px 0;
